<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:background="@drawable/copa_principal"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:id="@+id/eUsername"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/password"
        android:textAlignment="center"
        android:id="@+id/ePassword"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:id="@+id/bLogin"/>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Register"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:id="@+id/tRegister"/>
</LinearLayout>
