<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/iFoto"
        android:src="@drawable/copa_parque"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parques1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:id="@+id/tNombre"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:id="@+id/tDescrip"
            android:textColor="@color/blue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:textSize="10sp"
            android:id="@+id/tDirecion"
            android:textColor="@color/black"

            />

    </LinearLayout>
</LinearLayout>